<resources>
    <string name="app_name">TipCalculator</string>
    <string name="tip">Tip</string>
    <string name="enter">enter</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="ok_15">OK (15%%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="enter_number">Enter Number</string>
</resources>